# crml

./: .gitignore  Cargo.toml  README.md  crml.json  justfile
crates/crml/: Cargo.toml
crates/crml-core/: Cargo.toml
crates/crml-core/src/: generator.rs  lib.rs  selector.rs
crates/crml-derive/: Cargo.toml
crates/crml-derive/src/: generator.rs  lib.rs
crates/crml/src/: lib.rs  main.rs
examples/simple/: main.rs
examples/simple/crml/: data.rs  mod.rs
examples/simple/templates/: first.crml  index.crml  other.crml
