[package]
name = "crml-core"
version = "0.1.5"
edition = "2024"
description = "Crab Markup Language core"
authors = ["trisuaso"]
license = "MIT"
repository = "https://github.com/trisuaso/crml"

[dependencies]
ammonia = "4.0.0"
pathbufd = "0.1.4"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.134"

[lib]
doctest = false
