[package]
name = "crml-derive"
version = "0.1.5"
edition = "2024"
description = "Crab Markup Language derive macro"
authors = ["trisuaso"]
license = "MIT"
repository = "https://github.com/trisuaso/crml"

[dependencies]
pathbufd = "0.1.4"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.134"
# crml-core = { path = "../crml-core" }
crml-core = "0.1.5"
syn = { version = "2.0.94", features = ["full"] }
quote = "1.0.38"
proc-macro2 = "1.0.92"

[lib]
proc-macro = true
