[package]
name = "crml"
version = "0.1.6"
edition = "2024"
description = "Crab Markup Language"
authors = ["trisuaso"]
license = "MIT"
repository = "https://github.com/trisuaso/crml"

[dependencies]
# crml-derive = { path = "../crml-derive" }
# crml-core = { path = "../crml-core" }
crml-derive = "0.1.6"
crml-core = "0.1.6"

[[example]]
name = "simple"
path = "../../examples/simple/main.rs"
